--- a/Backend/Untitled.ipynb
+++ b/Backend/Untitled.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Detection 0: Left: 510 Top: 617 Right: 1469 Bottom: 1576\n"
+      "Detection 0: Left: 33 Top: -52 Right: 418 Bottom: 376\n",
+      "<dlib.full_object_detection object at 0x7f6dd5be2c38>\n"
      ]
     }
    ],
@@ -27,7 +28,7 @@
     "\n",
     "#первое фото\n",
     "\n",
-    "img = io.imread('test1.jpg')\n",
+    "img = io.imread('2.jpeg')\n",
     "\n",
     "#поиск лица\n",
     "\n",
@@ -36,6 +37,7 @@
     "    print(\"Detection {}: Left: {} Top: {} Right: {} Bottom: {}\".format(\n",
     "        k, d.left(), d.top(), d.right(), d.bottom()))\n",
     "    shape = sp(img, d)\n",
+    "    print(shape)\n",
     "#берем дескриптор\n",
     "\n",
     "face_descriptor1 = facerec.compute_face_descriptor(img, shape)\n"
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +66,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#face_descriptor1 = (open(\"file\", \"r\")).read()\n",
@@ -74,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8508644551632875\n"
+      "0.8502053006959135\n"
      ]
     }
    ],
@@ -93,7 +97,9 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import dlib\n",
@@ -114,7 +120,9 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.save(\"test.npy\", face_descriptor1)\n",
@@ -235,10 +243,109 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "126230 bytes\n",
+      "98085 bytes\n",
+      "120612 bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "import glob\n",
+    "import os\n",
+    "\n",
+    "filename_list = glob.glob('*.jpeg')\n",
+    "\n",
+    "for filename in filename_list:\n",
+    "    with open(filename, 'rb') as f:\n",
+    "        img_data = f.read()\n",
+    "        print('{} bytes'.format(len(img_data)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('120612 bytes', 'fucking_test.jpeg1.jpeg2.jpeg')\n"
+     ]
+    }
+   ],
+   "source": [
+    "import glob\n",
+    "import os\n",
+    "filename_list = glob.glob('*.jpeg')\n",
+    "filename = filename_list[0]  # Первый файл\n",
+    "# или:\n",
+    "filename = filename_list[-1]  # Последний файл\n",
+    "\n",
+    "with open(filename, 'rb') as f:\n",
+    "    img_data = f.read()\n",
+    "    filename_list = ''.join(filename_list)\n",
+    "    a = ('{} bytes'.format(len(img_data)), filename_list)\n",
+    "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dlib\n",
+    "from skimage import io\n",
+    "from scipy.spatial import distance\n",
+    "import numpy as np\n",
+    "import glob\n",
+    "import os\n",
+    "\n",
+    "filename_list = glob.glob('*.jpeg')\n",
+    "\n",
+    "\n",
+    "for filename in filename_list:\n",
+    "    with open(filename, 'rb') as f:\n",
+    "        img_data = f.read()\n",
+    "        file = open(\"sukatest.txt\", \"w\")\n",
+    "        file.write(str(filename_list))\n",
+    "        file.close\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"['fucking_test.jpeg', '1.jpeg', '2.jpeg']\""
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filename_list"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
